# lattia-vm

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  lattia-vm  output.txt  readme.md  syntax.txt
bytecode/: shell.lvmasm  showcase.lvmasm  stack_overflow.lvmasm
src/: main.c  utils.c  utils.h  vm.c  vm.h
src/bytecode/: count.lvmasm  fibonacci.lvmasm  showcase.lvmasm
src/tests/: test.c
